--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "mycontacts-backend-api",
+  "version": "1.0.0",
+  "description": "Progetto Express per l'API di backend dei miei contatti",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "author": "Michele Gabrieli",
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
