--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 5001
 ACCESS_TOKEN_SECRET = gabrielifamilyandferraresifamily1234567890
+DBHOST = "localhost"
+DBUSERNAME = "root"
+DBPASSWORD = ""
+DB = "moneyFlow"
