--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "joi": "^17.11.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
