--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "joi": "^17.11.0",
     "json-web-token": "^3.2.0",
