--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DBHOST = "localhost"
 DBUSERNAME = "root"
 DBPASSWORD = ""
 DB = "moneyflow"
-SECRETKEY = "QWERTY123456"
+SECRET_KEY = "QWERTY123456"
