--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Michele Gabrieli",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
