--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.11.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
   }
