--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "nodemon": "^3.0.1"
   }
 }
