--- a/config/mysql-deployment.yaml
+++ b/config/mysql-deployment.yaml
@@ -1,26 +1,47 @@
-containers:
-  - name: mysql
-    image: my-mysql:1
-    ports:
-      - containerPort: 3306
-    env:
-      - name: MYSQL_ROOT_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: mysql-secret
-            key: MYSQL_ROOT_PASSWORD
-      - name: MYSQL_DATABASE
-        value: "moneyFlow"
-      - name: MYSQL_USER
-        valueFrom:
-          secretKeyRef:
-            name: mysql-secret
-            key: MYSQL_USER
-      - name: MYSQL_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: mysql-secret
-            key: MYSQL_PASSWORD
-    volumeMounts:
-      - name: mysql-persistent-storage
-        mountPath: /var/lib/mysql
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mysql-deployment
+  labels:
+    app: mysql
+spec:
+  selector:
+    matchLabels:
+      app: mysql
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: mysql
+    spec:
+      containers:
+        - name: mysql
+          image: my-mysql:1
+          ports:
+            - containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: MYSQL_ROOT_PASSWORD
+            - name: MYSQL_DATABASE
+              value: "moneyFlow"
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: MYSQL_USER
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: MYSQL_PASSWORD
+          volumeMounts:
+            - name: mysql-persistent-storage
+              mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-persistent-storage
+          persistentVolumeClaim:
+            claimName: mysql-pv-claim
