--- a/config/mysql-secret.yaml
+++ b/config/mysql-secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  MYSQL_ROOT_PASSWORD: "root"
-  MYSQL_USER: web
-  MYSQL_PASSWORD: web
+  MYSQL_ROOT_PASSWORD: cm9vdA==
+  MYSQL_USER: d2Vi
+  MYSQL_PASSWORD: d2Vi
