Prende sempre ultima immagine

--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: michelegabrieli/my-node:1
+          image: michelegabrieli/my-node:latest
           ports:
             - containerPort: 5000
           resources:
