--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: backend
-          image: michelegabrieli/my-node:2
+          image: michelegabrieli/my-node:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 5000
           resources:
