--- a/backend-service.yaml
+++ b/backend-service.yaml
@@ -6,8 +6,6 @@ spec:
   selector:
     app: backend
   ports:
-    - protocol: TCP
-      port: 5000
+    - port: 5000
       targetPort: 5000
-      nodePort: 30000
-  type: NodePort
+  type: ClusterIP
