--- a/config/mysql-deployment.yaml
+++ b/config/mysql-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: michelegabrieli/my-mysql:1
+          image: docker.io/michelegabrieli/my-mysql:1
           ports:
             - containerPort: 3306
           env:
