--- a/backend-service.yaml
+++ b/backend-service.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: backend-service
 spec:
+  type: NodePort
   selector:
     app: backend
   ports:
-    - port: 5000
+    - protocol: TCP
+      port: 5000
       targetPort: 5000
-  type: ClusterIP
+      nodePort: 30500
