--- a/backend-service.yaml
+++ b/backend-service.yaml
@@ -7,7 +7,8 @@ spec:
   selector:
     app: backend
   ports:
-    - protocol: TCP
+    - name: web
+      protocol: TCP
       port: 5000
       targetPort: 5000
       nodePort: 30500
