--- a/config/mysql-service.yaml
+++ b/config/mysql-service.yaml
@@ -2,11 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  labels:
+    app: mysql
 spec:
   selector:
     app: mysql
   ports:
-    - protocol: TCP
-      port: 3306 # porta interna del Service
-      targetPort: 3306 # porta del container MySQL
+    - name: mysql        # Porta per l'app backend
+      protocol: TCP
+      port: 3306
+      targetPort: 3306
+    - name: metrics      # Porta per Prometheus (l'exporter)
+      protocol: TCP
+      port: 9104
+      targetPort: 9104
   type: ClusterIP
